# Phishing_Filter

./: README.md  pyproject.toml
phishing_filter/: Makefile  README.md  pyproject.toml  requirements.txt
phishing_filter/docs/: mkdocs.yml
phishing_filter/docs/docs/: index.md
phishing_filter/models/: logistic_regression_classifier.pkl  support_vector_classifier.pkl
phishing_filter/notebooks/: process.ipynb
phishing_filter/phishing_filter/: __init__.py  dataset.py  email_structure.py  features.py  plots.py  tokens_class.py
phishing_filter/phishing_filter/modeling/: predict.py  train.py
phishing_filter/streamlit_app/: get_email.py  main.py  test_email_reader.py
