[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "phishing_filter"
version = "0.0.1"
description = "Building a phishing filter"
authors = [
  { name = "Your name (or your organization/company/team)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["phishing_filter"]
include = ["pyproject.toml", "phishing_filter/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["phishing_filter"]
force-sort-within-sections = true

